--- a/Tracker/Resources/en.lproj/Localizable.strings
+++ b/Tracker/Resources/en.lproj/Localizable.strings
@@ -5,3 +5,10 @@
   Created by Artem Morozov on 18.09.2024.
   
 */
+
+"trackerScreenTitle" = "Trackers";
+"filtersButtonTitle" = "Filters";
+"statisticScreenTitle" = "Statistics";
+"filterEmptyResultStubText" = "Nothing found";
+"emptyTrackersStubText" = "What will we track?";
+"emptyStatisticStubText" = "Nothing to analyze yet";
